--- a/bib/references.bib
+++ b/bib/references.bib
@@ -9,6 +9,7 @@
   doi = {https://doi.org/10.1016/j.cstp.2019.09.001},
   url = {https://www.sciencedirect.com/science/article/pii/S2213624X19301063},
   author = {Simon Dale and Matthew Frost and Stephen Ison and Lucy Budd},
+  keywords = {type : research article, transport mode choice, commuters, case study, data collection techniques, structured interviews, self-completion survey methods, Parking Space Levies schemes, mode shift, congestion reduction, non-car-based modes of transportation}
   abstract = {A Workplace Parking Levy (WPL) scheme raises a levy on private non-domestic off-street parking provided by employers. In April 2012 Nottingham became the first UK City to implement such a scheme with the revenue generated hypothecated for funding two additional tram lines into the city, the refurbishment of the main railway station and enhancements to a number of bus services. Evaluations of similar Parking Space Levies schemes in Australia show that their introduction, along with any transport improvements they part fund, have been followed by mode switch to non-car based modes, a pre-requisite for congestion constraint. The aim of this paper is to investigate the impact the introduction of the Nottingham Workplace Parking Levy and its associated transport improvements has had on transport mode choice for commuters. This research however, does not directly demonstrate cause and effect leaving open the possibility that the observed mode shift could be caused by exogenous factors. The paper is based on data collected from a survey of 2500 commuters in Nottingham, relating to their mode choice. The results indicate that 8.6% of commuters currently travelling by sustainable modes switched from the car between 2010 and 2016 at least in part due to the implementation of the WPL and/or the associated transport improvements. In the region of 50 per cent of those individuals gave the WPL as a stand-alone scheme as an important factor in their decision to shift away from the car via an increase in the cost of parking at work or because their employer had removed workplace parking spaces. However, this research has also revealed evidence of commuters switching to the car away from other modes demonstrating a significant suppressed demand for travel by car which in part offsets some of the beneficial impacts of the WPL package.}
 }
 @article{PETERSEN2019426,
