--- a/bib/references.bib
+++ b/bib/references.bib
@@ -9,7 +9,7 @@
   doi = {https://doi.org/10.1016/j.cstp.2019.09.001},
   url = {https://www.sciencedirect.com/science/article/pii/S2213624X19301063},
   author = {Simon Dale and Matthew Frost and Stephen Ison and Lucy Budd},
-  keywords = {type : research article, transport mode choice, commuters, case study, data collection techniques, structured interviews, self-completion survey methods, Parking Space Levies schemes, mode shift, congestion reduction, non-car-based modes of transportation}
+  keywords = {type : research article, type: qualitative, transport mode choice, commuters, case study, data collection techniques, structured interviews, self-completion survey methods, Parking Space Levies schemes, mode shift, congestion reduction, non-car-based modes of transportation}
   abstract = {A Workplace Parking Levy (WPL) scheme raises a levy on private non-domestic off-street parking provided by employers. In April 2012 Nottingham became the first UK City to implement such a scheme with the revenue generated hypothecated for funding two additional tram lines into the city, the refurbishment of the main railway station and enhancements to a number of bus services. Evaluations of similar Parking Space Levies schemes in Australia show that their introduction, along with any transport improvements they part fund, have been followed by mode switch to non-car based modes, a pre-requisite for congestion constraint. The aim of this paper is to investigate the impact the introduction of the Nottingham Workplace Parking Levy and its associated transport improvements has had on transport mode choice for commuters. This research however, does not directly demonstrate cause and effect leaving open the possibility that the observed mode shift could be caused by exogenous factors. The paper is based on data collected from a survey of 2500 commuters in Nottingham, relating to their mode choice. The results indicate that 8.6% of commuters currently travelling by sustainable modes switched from the car between 2010 and 2016 at least in part due to the implementation of the WPL and/or the associated transport improvements. In the region of 50 per cent of those individuals gave the WPL as a stand-alone scheme as an important factor in their decision to shift away from the car via an increase in the cost of parking at work or because their employer had removed workplace parking spaces. However, this research has also revealed evidence of commuters switching to the car away from other modes demonstrating a significant suppressed demand for travel by car which in part offsets some of the beneficial impacts of the WPL package.}
 }
 @article{PETERSEN2019426,
@@ -23,7 +23,7 @@
   doi = {https://doi.org/10.1016/j.eswa.2018.11.028},
   url = {https://www.sciencedirect.com/science/article/pii/S0957417418307486},
   author = {Niklas Christoffer Petersen and Filipe Rodrigues and Francisco Camara Pereira},
-  keywords = {Bus travel time prediction, Intelligent Transport Systems, Convolutional neural network (CNN), Long short-term memory (LSTM), Deep learning},
+  keywords = { type : technique ,Bus travel time prediction, Intelligent Transport Systems, Convolutional neural network (CNN), Long short-term memory (LSTM), Deep learning},
   abstract = {Accurate and reliable travel time predictions in public transport networks are essential for delivering an attractive service that is able to compete with other modes of transport in urban areas. The traditional application of this information, where arrival and departure predictions are displayed on digital boards, is highly visible in the city landscape of most modern metropolises. More recently, the same information has become critical as input for smart-phone trip planners in order to alert passengers about unreachable connections, alternative route choices and prolonged travel times. More sophisticated Intelligent Transport Systems (ITS) include the predictions of connection assurance, i.e. an expert system that will decide to hold services to enable passenger exchange, in case one of the services is delayed up to a certain level. In order to operate such systems, and to ensure the confidence of passengers in the systems, the information provided must be accurate and reliable. Traditional methods have trouble with this as congestion, and thus travel time variability, increases in cities, consequently making travel time predictions in urban areas a non-trivial task. This paper presents a system for bus travel time prediction that leverages the non-static spatio-temporal correlations present in urban bus networks, allowing the discovery of complex patterns not captured by traditional methods. The underlying model is a multi-output, multi-time-step, deep neural network that uses a combination of convolutional and long short-term memory (LSTM) layers. The method is empirically evaluated and compared to other popular approaches for link travel time prediction and currently available services, including the currently deployed model at Movia, the regional public transport authority in Greater Copenhagen. We find that the proposed model significantly outperforms all the other methods we compare with, and is able to detect small irregular peaks in bus travel times very quickly.}
 }
 @article{Jabamony2020,
@@ -49,7 +49,7 @@ arrival time of the bus in different stops for 10 days is used for training the 
 on the server-side. In this paper, the performance of the proposed IOT-ANN-SPTS system is compared with the 
 existing previous related works. From the performance analysis, it is shown that the proposed system produced less 
 error (MAE=134.582, RMSE=197.738, MAPE=28.87) when compared to the other methods.}
-  keywords = {Intelligent transportation system, Internet of things, Internet-connected sensory devices, Artificial neural 
+  keywords = {type: technique, Intelligent transportation system, Internet of things, Internet-connected sensory devices, Artificial neural 
 network, Smart public transportation system, Public transport system.}
 }
 @article{8954709,
@@ -62,6 +62,7 @@ network, Smart public transportation system, Public transport system.}
   pages={11917-11929},
   doi={10.1109/ACCESS.2020.2965094}
   abstract = {Bus arrival prediction has important implications for public travel, urban dispatch, and mitigation of traffic congestion. The factors affecting urban traffic conditions are complex and changeable. As the predicted distance increases, the difficulty of traffic prediction becomes more difficult. Forecast based on historical data responds quite slowly for changes under the short-term conditions, and vehicle prediction based on real-time speed is not sufficient to predict under long-term conditions. Therefore, an arrival prediction method based on temporal vector and another arrival prediction method based on spatial vector is proposed to solve the problems of remote dependence of bus arrival and road incidents, respectively. In this paper, combining the advantages of the two prediction models, this paper proposes a long short-term memory (LSTM) and Artificial neural networks (ANN) comprehensive prediction model based on spatial-temporal features vectors. The long-distance arrival-to-station prediction is realized from the dimension of time feature, and the short-distance arrival-to-station prediction is realized from the dimension of spatial feature, thereby realizing the bus-to-station prediction. Besides, experiments were conducted and tested based on the entity dataset, and the result shows that the proposed method has high accuracy among bus arrival prediction problems.}
+  keywords = {type : technique, type:qulitative Predictive models,Support vector machines,Neural networks,Global Positioning System,Roads,Real-time systems}
 }
 @article{inproceedings,
   author = {Kviesis, Armands and Zacepins, Aleksejs and Komasilovs, Vitalijs and Munizaga, Marcela},
@@ -85,7 +86,7 @@ network, Smart public transportation system, Public transport system.}
   information about arrival/departure times, delays or dwell times. Distance between stops and delay (assumed
   values based on route observations by authors) were used as inputs for both models. It was concluded that
   SVR algorithm showed better results, but the difference was not significantly large.}
-  keywords = {Smart Public Transport, Public Buses, Arrival Time, GPS Data. , type : tested }
+  keywords = {type : technique, qualitative, Smart Public Transport, Public Buses, Arrival Time, GPS Data }
 }
 @article{8852358,
   author={Achar Avinash, Rohith RegiKumar, B Anil},
@@ -97,7 +98,7 @@ network, Smart public transportation system, Public transport system.}
   number = {NA},
   volume = {NA},
   abstract={Public transport buses exhibit uncertainties in their arrival/travel times, due to several factors such as signals, dwell times at bus stops, seasonal variations, fluctuating travel demands etc. Further, factors like excess vehicles, acute lack of lane discipline and diversity in modes of transport additionally plague the traffic in the developing world. Owing to these diverse factors, the bus arrival time prediction (BATP) continues to be a challenging problem especially in the developing world. The current work proposes a data-driven method to perform bus arrival time prediction in real-time. Unlike existing approaches, the proposed method explicitly learns both the spatial and temporal correlations/patterns of traffic in a novel and general fashion. In particular, it first detects the unknown order of spatial dependence and then learns general nonlinear and non-stationary correlations using supervised learning, for this detected order. The real time prediction problem is now posed as an inference problem on an associated non-linear dynamical system (NLDS) model. We propose to use an Extended Kalman Filter (EKF) to solve this inference problem in an approximate but efficient manner. We demonstrate the effectiveness of our proposed algorithm on real field data from challenging traffic conditions in the developing world. Our experiments demonstrate that the proposed EKF outperforms diverse existing state-of-art data driven approaches proposed for the same problem.},
-  keywords={Correlation,Predictive models,Computational modeling,Real-time systems,Data models,Schedules,Kalman filters},
+  keywords={type: Survey, Correlation,Predictive models,Computational modeling,Real-time systems,Data models,Schedules,Kalman filters},
   doi={10.1109/IJCNN.2019.8852358},
   ISSN={2161-4407},
   month={July},}
@@ -111,7 +112,7 @@ network, Smart public transportation system, Public transport system.}
   volume = {NA},
   pages={473-478},
   abstract={Reliable and accurate prediction of bus arrival time is considered as one of the important services to attract people's choice of bus ridership. In this paper, we develop a simple yet accurate real-time bus arrival prediction system for a crowded small tourist city, like Macao, using accurate on-line bus locations provided by the government website. These accurate bus locations are freely available on-line, which are generated by dedicated sensors installed in bus stops and buses. We first proposed a link time model for storing all of the link times between adjacent bus stops on different bus routes in the entire network so that the trip time between any two of the bus stops in the network can be predicted in real-time. Three different simple models based on historical and real-time on-line bus locations, namely Simple Moving Average (SMA), Artificial Neural Network (ANN) and Hybrid Model, are proposed for the bus arrival prediction system, taking into account the real-time weather conditions. It was found that the Hybrid model perform the best among the three models. The average mean absolute percentage error (MAPE) for the Hybrid model is 17% and the average mean absolute error (MAE) and root mean square error (RMSE) is less than 1 minute. For future works, more advanced deep learning models with Kalman filtering can be evaluated, using on-line bus locations from more bus routes.},
-  keywords={Predictive models,Real-time systems,Meteorology,Data models,Artificial neural networks,Urban areas,Global Positioning System},
+  keywords={type : Technique, type : Qualitative ,Predictive models,Real-time systems,Meteorology,Data models,Artificial neural networks,Urban areas,Global Positioning System},
   doi={10.1109/ICCT46805.2019.8947251},
   ISSN={2576-7828},
   month={Oct},}
@@ -125,6 +126,7 @@ network, Smart public transportation system, Public transport system.}
   journal = {Transportation Research Record: Journal of the Transportation Research Board},
   doi = {10.1177/0361198119837502}
   abstract = {We propose a new structured transit system with flexible bus line length based on the real-time requests of passengers. This operation mode can meet the travel demands of passengers (lower travel-time cost) and reduce the number of unnecessary stops (without boarding or alighting activities). We then compare the performance of the proposed transit system with that of fixed-route transit service and show the pros and cons of each system for several passenger demand levels. It is found that at low-to-moderate demand levels, the proposed flexible-route system tends to provide the lowest total travel time. In comparing a real-world deployment of the system in Guangzhou with comparable alternative system states, the optimization of the former is evident in idle and tidal modes, in which the total travel times reduced by more than 10%. Moreover, this operating system can achieve enhanced performance with the development of automated vehicle technology in the future.}
+  keywords = {type :research , type : quantative, optimisation algorithms, Scheduling bus transport, bus information processing centres , Vehicle surveys  }
 }
 @article{BRUGLIERI2015493,
   title = {A Real-time Information System for Public Transport in Case of Delays and Service Disruptions},
@@ -137,7 +139,7 @@ network, Smart public transportation system, Public transport system.}
   doi = {https://doi.org/10.1016/j.trpro.2015.09.003},
   url = {https://www.sciencedirect.com/science/article/pii/S2352146515001908},
   author = {Maurizio Bruglieri, Francesco Bruschi, Alberto Colorni, Alessandro Luè, Roberto Nocerino, Vincenzo Rana},
-  keywords = {advanced traveller information, public transport, travel planner, time-dependent minimum path},
+  keywords = {type : quantative, type: technique , advanced traveller information, public transport, travel planner, time-dependent minimum path},
   abstract = {Promoting the use of public transportation and Intelligent Transport Systems, as well as improving transit accessibility for all citizens, may help in decreasing traffic congestion and air pollution in urban areas. In general, poor information to customers is one of the main issues in public transportation services, which is an important reason for allocating substantial efforts to implement a powerful and easy to use and access information tool. This paper focuses on the design and development of a real time mobility information system for the management of unexpected events, delays and service disruptions concerning public transportation in the city of Milan. Exploiting the information on the status of urban mobility and on the location of citizens, commuters and tourists, the system is able to reschedule in real time their movements. The service proposed stems from the state of the art in the field of travel planners for public transportation, available for Milan. Peculiarly, we built a representation of the city transit based on a time-expanded graph that considers the interconnections among all the stops of the rides offered during the day. The structure distinguishes the physical stations and the get on/get off stops of each ride, representing them with two different types of nodes. Such structure allows, with regard to the main focus of the project, to model a wide range of service disruptions, much more meaningful than those possible with approaches currently proposed by transit agencies. One of the most interesting point lies in the expressive capability in describing the different disruptions: with our model it is possible, for instance, to selectively inhibit getting on and/or off at a particular station, avoid specific rides, and model temporary deviations.}
 }
 @article{9425771,
@@ -150,6 +152,6 @@ network, Smart public transportation system, Public transport system.}
   number = {NA},
   volume - {NA}
   abstract={An accurate real-time public transport prediction system occupies an important position in urban development. It includes the accurate prediction of the model and the real-time processing of the fitting data. This paper developed a bus arrival time prediction system based on the Spark framework. The process included data collection, data storage (using HDFS), data preprocessing, and modeling (ARIMAX and SVR). Moreover, we have collected data of 78 days of Chiang Mai bus real-time location and location timestamp. We used these data to construct attributes related to bus prediction. The experiment results show that the SVR model's accuracy is as high as 99.5%, which is 25% higher than that of the ARIMAX model. Therefore, the time series prediction system developed based on the Spark framework with the SVR algorithm can quickly and accurately predict bus arrival time.},
-  keywords={},
+  keywords={type : quantative, type: research ,Spark, Big-Data, Machine learning algorithms,Time series analysis,Data preprocessing,Memory,Predictive models,Media,Prediction algorithms},
   doi={10.1109/ECTIDAMTNCON51128.2021.9425771},
   month={March},}
